build: remove warnigns from bump script